# api-FastAPI

./: .gitignore  pyproject.toml
app/: dependencies.py  main.py
app/config/: db.py
app/middlewares/: logger.py
app/models/: person.py  person_address.py
app/routes/: health_check.py  persons.py  persons_address.py
app/schemas/: assistant.py
app/utils/: logger.py
tests/: test_main.py
